--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,8 @@ body {
     background: #ffffff;
 display: flex;
 flex-direction: row-reverse;
+justify-content: center;
+margin: 0 auto;
 }
 
 .main {
