--- a/css/index.css
+++ b/css/index.css
@@ -4,12 +4,19 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
+ul,
+ol {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .wrap {
     background: #ffffff;
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
     margin: 0 auto;
+    width: 1200px;
 }
 
 .main {
@@ -117,4 +124,123 @@ body {
     font-weight: 400;
     line-height: 24px;
     color: #161D2A;
+}
+
+.my__profession {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17px;
+    color: #000000;
+    margin-top: 0;
+    margin-bottom: 8px;
+}
+
+.my__name {
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 55px;
+    color: #000000;
+    margin-top: 0;
+    margin-bottom: 12px;
+}
+
+.my__descr {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+}
+
+.myInfo {
+    margin-bottom: 40px;
+}
+
+.myProjects__title {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 27px;
+    color: #000000;
+    margin-bottom: 8px;
+}
+
+.myProjects__item {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 27px;
+    color: #000000;
+}
+
+.myProjects__list {
+    padding-left: 16px;
+}
+
+.myProjects__item-link {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    text-decoration-line: underline;
+    color: #005fff;
+}
+
+.myProjects__item-tech {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #595959
+}
+
+.myProjects {
+    margin-bottom: 40px;
+}
+
+.company__exp-title {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 27px;
+    color: #000000;
+    margin-top: 0;
+    margin-bottom: 8px;
+}
+
+.company__exp-prof {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 27px;
+    color: #000000;
+    margin-top: 0;
+    margin-bottom: 12px;
+}
+
+.company__exp-prof span {
+    color: #6D9BF5;
+}
+
+.company__exp-period {
+    color: #A8A8A8;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
+    margin-bottom: 8px;
+}
+
+.company__exp-period span {
+    color: #000000;
+}
+
+.company__duties-list {
+    padding-left: 16px;
+
+}
+
+.company__duties__list-item {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #595959;
+}
+
+.company__one,
+.company__two,
+.company__three {
+    margin-bottom: 12px;
 }
