--- a/css/index.css
+++ b/css/index.css
@@ -244,3 +244,41 @@ ol {
 .company__three {
     margin-bottom: 12px;
 }
+
+.educ {
+    margin-top: 40px;
+}
+.educ__title {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 27px;
+    color: #000000;
+}
+
+.educ__univers {
+    color: #6D9BF5;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 20px;
+    margin-top: 8px;
+}
+
+.educ__facult {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17px;
+    color: #000000;
+    margin-top: 8px;
+}
+
+.educ__period {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
+    color: #A8A8A8;
+    margin-top: 8px;
+}
+
+.educ__period span {
+    color: #000000;
+}
